# hca-ingest

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  build.sbt  docker-compose.yaml  update_docker_image.sh
orchestration/: .pre-commit-config.yaml  20210927_dev_test.csv  Chart.yaml  Dockerfile  README.md  bquxjob_5d615e0e_17c1951dc9c.csv  dagster.yaml  dcp100_manifest.csv  dcp81_manifest.csv  dcp98_manifest.csv  dcp99_manfest.csv  manifest.csv  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  values.schema.json  values.yaml
orchestration/dagster/: Dockerfile  README.md  workspace.yaml
orchestration/dagster/hca_orchestration/: pipelines.py  solids.py
orchestration/dagster/hca_orchestration/environments/: test_base.yaml
orchestration/dagster/hca_orchestration/resources/: base.py  modes.py
orchestration/dagster/hca_orchestration/tests/: test_pipelines.py
orchestration/dagster_orchestration/: .env.test  .pre-commit-config.yaml  Dockerfile  README.md  dcp7_manifest.csv  dev_workspace.yaml  lattice_manifest.csv  mypy.ini  poetry.lock.orig  pyproject.toml  pyproject.toml.orig  pytest.ini  tox.ini  workspace.yaml
orchestration/dagster_orchestration/hca_manage/: README.md  billing_profile.py  bq_managers.py  check.py  common.py  common.py.orig  dataset.py  dataset.py.orig  diff_dirs.py  find_project_rows.py  job.py  main.py  manage.py  snapshot.py  soft_delete.py  testing.csv  trace_staging_areas.py  validate_staging_area_loaded.py  validation.py  verify_release_manifest.py
orchestration/dagster_orchestration/hca_manage/dual_writer/: argo_job.py  argo_job.py.orig  dagster_job.py  db_diff.py  dual_writer.py
orchestration/dagster_orchestration/hca_manage/tests/: test_check_manager.py  test_dataset_manager.py  test_hca_manage.py  test_snapshot_manager.py  test_soft_delete_manager.py  util.py
orchestration/dagster_orchestration/hca_orchestration/: __init__.py  pipelines.py  repositories.py  sensors.py  solids.py
orchestration/dagster_orchestration/hca_orchestration/config/: README.md  __init__.py  configurators.py  preconfiguration_loader.py  preconfiguration_schema.py
orchestration/dagster_orchestration/hca_orchestration/contrib/: README.md  argo_workflows.py  bigquery.py  data_repo.py  gcs.py  google.py  retry.py  slack.py
orchestration/dagster_orchestration/hca_orchestration/environments/: presets_local_dev_testing.yaml  stage_data_local_e2e.yaml  test_base.yaml  test_stage_data.yaml  test_stage_data_local_e2e.yaml  test_validate_egress.yaml
orchestration/dagster_orchestration/hca_orchestration/models/: entities.py  hca_dataset.py  scratch.py
orchestration/dagster_orchestration/hca_orchestration/pipelines/: __init__.py  copy_project.py  cut_snapshot.py  load_hca.py  stage_data.py  utils.py  validate_egress.py  validate_ingress.py
orchestration/dagster_orchestration/hca_orchestration/repositories/: dev.py
orchestration/dagster_orchestration/hca_orchestration/resources/: __init__.py  base.py  beam.py  bigquery.py  bigquery_service.py  data_repo.py  data_repo_service.py  hca_project_config.py  load_tag.py  sam.py  scratch_config.py  slack.py  storage.py  (+2 more)
orchestration/dagster_orchestration/hca_utils/: README.md  main.py  utils.py
orchestration/dagster_orchestration/tmp/: 75e7414b-3333-4dd7-8ec5-d25748b35487_2020-06-16T14:35:06.273000Z.json
orchestration/dagster_poc/: Dockerfile  README.md  pyproject.toml  workspace.yaml
orchestration/dagster_poc/hca_proto/: pipelines.py  resources.py  solids.py
orchestration/example-values/: no-version.yaml
orchestration/hca_manage/: README.md  batch_snapshot_update.py  billing_profile.py  bq_managers.py  bulk_snap.py  check.py  common.py  dataset.py  deduplicate_staging_areas.py  find_prod_migration_snapshots.py  find_project_rows.py  get_snapshot_assets.py  job.py  manifest.py  pull_dcp_snapshots.py  snapshot.py  soft_delete.py  upload_manifest.py  validation.py  verify_dataset_subgraphs.py  verify_release_manifest.py  verify_subgraphs.py
orchestration/hca_manage/import_tools/: run_import.py
orchestration/hca_manage/tests/: test_check_manager.py  test_dataset_manager.py
orchestration/hca_orchestration/: repositories.py  sensors.py
orchestration/hca_orchestration/contrib/: bigquery.py  dagster.py  gcs.py
orchestration/hca_orchestration/models/: entities.py  hca_dataset.py
orchestration/hca_orchestration/pipelines/: __init__.py  copy_project.py  cut_snapshot.py  load_hca.py  set_snapshot_public.py  validate_ingress.py
orchestration/hca_orchestration/repositories/: base_repositories.py  common.py  dev_repositories.py  dev_repository.py  local_repository.py  prod_repositories.py  prod_repository.py
orchestration/hca_orchestration/resources/: bigquery_service.py  data_repo_service.py  hca_project_config.py  load_tag.py  utils.py
orchestration/hca_orchestration/solids/: create_snapshot.py  data_repo.py  validate_dataset.py  validate_egress.py  validate_ingress.py
orchestration/hca_orchestration/support/: dates.py  matchers.py  subgraphs.py
orchestration/prefect_poc/hca-proto/: pyproject.toml
orchestration/scripts/: check-bulk-file-ingest-result.py  diff-data-files.sh  diff-hca-table.sh  get-outdated-row-ids.sh  inject-file-ids.sh  list-gcs-files-as-array.py  move-error-logs-to-gcs.sh  move-logs-to-bucket.sh  poll-ingest-job.py  query-rows-to-append.sh  submit-bulk-file-ingest.py  validate-checksums.py
orchestration/templates/: diff-hca-table.yaml  import-hca-no-files.yaml  import-hca-total.yaml  import-hca.yaml  ingest-hca-no-files.yaml  ingest-hca.yaml  ingest-metadata.yaml  load-hca-no-files.yaml  load-hca.yaml  load-table.yaml  noop-flow.yaml  notification.yaml  serviceaccount.yaml  stage-data.yaml  stage-hca.yaml
orchestration/workflows/: README.md  cowsay.yaml
orchestration/workflows/dev/: run-import-hca-total.yaml  run-stage-data.yaml
orchestration/workflows/prod/: run-import-hca-total.yaml
scripts/hca-utils/: README.md  pyproject.toml
scripts/hca-utils/hca_utils/: main.py  utils.py
scripts/hca-utils/tests/: test_hca_utils.py
(+267 files in other folders)
