[tool.poetry]
name = "hca_orchestration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# until https://bugs.python.org/issue45081 is pushed in an upcoming python version we can't upgrade past 3.9.6
# ^^ this bug was moved to GitHub https://github.com/python/cpython/issues/89244 and has been closed so we can move beyond 3.9.6.
# both aherbst & bahill have confirmed this works with 3.9.11 and the latest lock file was built with 3.9.11.
#
# to prevent unininteded upgrades we need to provide upperbound versions for the dependencies. For example ~3.4 instead of ^3.4
python = "3.9.6"
argo-workflows = "^5.0.0"
cached-property = "^1.5.2"
dagster = "0.12.14"
dagster-k8s = "0.12.14"
dagster-postgres = "0.12.14"
dagster-slack = "0.12.14"
data-repo-client = "^1.134.0"
google-cloud-bigquery = "^2.4.0"
google-cloud-storage = "^1.3.5"
python-dateutil = "^2.8.1"
typing-extensions = "^3.7.4"
pyyaml = "^5.3"
dagster-gcp = "^0.12.14"
broad-dagster-utils = "0.6.7"
graphql-ws = "<0.4.0"
hca-import-validation = "^0.0.8"
rfc3339-validator = "^0.1.4"
markupsafe = "2.0.1"
protobuf = "3.20.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
dagit = "0.12.14"
flake8 = "^3.8.4"
mypy = "^0.812"
pdbpp = "^0.10.2"
pre-commit = "^2.11.0"
pytest = "^6.2.1"
pytest-dotenv = "^0.5.2"
isort = "^5.10.1"

[tool.poetry.scripts]
check = "hca_manage.check:run"
dataset = "hca_manage.dataset:run"
snapshot = "hca_manage.snapshot:run"
soft_delete = "hca_manage.soft_delete:run"
job = "hca_manage.job:fetch_job_info"

[build-system]
requires = ["poetry-core=^1.1.8"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
exclude = ".pytest_cache,__pycache__"
max_line_length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
