[tool.poetry]
name = "hca_orchestration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.10.5"
google-cloud-bigquery = "^2.4.0"
google-cloud-storage = "^1.3.5"
dagster-k8s = "^0.10.5"
data-repo-client = "^1.0.194.post5"
argo-workflows = "^5.0.0"
dagster-postgres = "^0.10.9"
python-dateutil = "^2.8.1"
typing-extensions = "^3.7.4"
dagster-slack = "^0.10.9"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
pytest = "^6.2.1"
dagit = "^0.10.5"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pre-commit = "^2.11.0"
mypy = "^0.812"

[tool.poetry.scripts]
manage = "hca_manage.main:run"

[build-system]
requires = ["poetry-core=^1.1.5"]
build-backend = "poetry.core.masonry.api"
