[tool.poetry]
name = "dagster_poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.9.22"
dagit = "^0.9.22"
kubernetes = "^12.0.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
