[tool.poetry]
name = "dagster_poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.9.22"
dagit = "^0.9.22"
google-cloud-storage = "^1.3.5"
dagster-k8s = "^0.9.22"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
