[tool.poetry]
name = "hca-utils"
version = "0.1.0"
description = "Simple HCA utility CLI"
authors = ["Raaid Arshad <rarshad@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^2.4.0"
google-cloud-storage = "^1.33.0"
requests-cache = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
hca = 'hca_utils.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
