[tool.poetry]
name = "hca-proto"
version = "0.1.0"
description = "HCA Prefect PoC"
authors = ["Raaid Arshad <rarshad@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^0.14.5"
google-cloud-storage = "^1.3.5"
data-repo-client = "^1.0.194.post5"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
